step 4 added a csv response & all views working plus added more details in views

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,14 @@
-<% @books.each do |book| %>
-  <p><%= book.title %></p>
-  <p><%= book.author %></p>
-<% end %>
+<h1> B O O K S </h1>
+
+<ul class = "books" >
+  <% @books.each do |book| %>
+    <li class = "book">
+      <h2><%= book.title %></h2>
+      <dl>
+        <dt> Book ID: <%= book.id %></dt>
+        <dt> Book Author: <%= book.author %></dt>
+        <dt> Book Already Read: <%= book.already_read %></dt>
+      </dl>
+    </li>
+  <% end %>
+</ul>
